# bdns-resolver

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
config/: bdns-resolver.env
src/: main.rs
