[package]
name = "bdns-resolver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.8"
tide = "0.16"
tide-rustls = "0.3"
tokio = { version = "0.2", features = ["full"] }
trust-dns-resolver = "0.20"
